	  does clear ctx->base_ntfs_ino which in turn means that
	  ntfs_attr_reinit_search_ctx() does not clear ctx->al_entry.  Now,
	  ntfs_attr_reinit_search_ctx() always clears ctx->al_entry.
	- Rename scpu_to_le{16,32,64}() to cpu_to_sle{16,32,64}() to match the
	  kernel.
	- ntfsclone: honor bad clusters list ($BadClus:$Bad), known bad sectors
	  aren't tried to be saved anymore. (Szaka)

04/09/2004 - 1.9.4 - Urgent bug fixes.

	- Rewrite win32_io.c to allow device level write support.  (Yuval)
	- Make ntfscp update file size in $FILE_NAME(0x30) attribute.  (Yura)
	- Fix ntfsclone crash when --restore-image was used for block device
	  outputs.  (Masaru Kawashima, Szaka)
	
03/09/2004 - 1.9.3 - Lots of fixes and enhancements all over the place.

	- Fix access of MFT_RECORD->bytes_in_use to use le32_to_cpu() instead
	  of le16_to_cpu() in libntfs/volume.c.  (Pete Curran)
	- Rename uchar_t to ntfschar everywhere since uchar_t is already
	  defined on Solaris to be an unsigned 1-byte character and it is also
	  defined like this in POSIX.
	- Do not use the ++ operator on a variable when it is being passed as a
	  parameter to a macro in libntfs/unistr.c.  (Pete Curran)
	- Fix out of source tree build of utilities by changing $top_srcdir to
	  $top_builddir in the references to the build library in the makefile
	  template ntfsprogs/Makefile.am.  (Yuval)
	- Dump general info about an inode in ntfsinfo.  (Yuval)
	- Add detection for <sys/byteorder.h> and make endianness detection
	  work on Solaris 2.6 (Yuval) and Solaris 9 (Anton).
	- Emulate bswap_{16,32,64}() if not available/we cannot find them.
	  This has the advantage that the problems on FreeBSD running on big
	  endian, 64-bit machine will just disappear as we will emulate the
	  calls even though they exist with a different name (bswap16(), etc
	  instead of bswap_16(), etc).  (Anton)
	- Undelete: add ability to recover ranges of inodes.  (Holger Ohmacht)